--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="">
-<title>Lab 1</title>
-<style>
-</style>
-</head>
-<body>
-    <p>Hello World</p>
-</body>
-</html>
+Hello World
