--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<title>COMP 351 Website</title>
+</head>
+<body>
+    <h1>Hello World</h1>
+</body>
+</html>
