added homepage, lab 1, quiz

--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="css/style.css">
 <title>COMP 351 Website</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+<div id="wrapper">
+    <nav>
+        <p id="navigation">Navigation</p>
+        <a href="index.html">Home</a>
+        <a href="COMP351/COMP351.html">COMP 351 Labs</a>
+        <a href="COMP351/labs/1/quizQuestions/quiz.html">Hard-Coded-Quiz</a>
+    </nav>
+    <main>
+    <h1>COMP 351 Home Page</h1>
+    <img id="image" src="images/nick.png">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fringilla pretium efficitur. Nulla a enim eu mi facilisis venenatis eget id massa. Nulla sit amet sagittis quam. Maecenas auctor, ex quis mollis convallis, metus odio tristique arcu, a vehicula quam sem nec neque. Phasellus ut orci hendrerit eros facilisis venenatis. Praesent felis turpis, aliquam vitae mollis sed, mattis et tellus. Ut et neque urna. Donec porttitor ipsum eu iaculis dignissim. Praesent consequat rhoncus massa et semper. Morbi iaculis dolor id velit semper, eu tempor arcu finibus. Vivamus a lacus auctor, venenatis dui vel, volutpat enim.</p>
+    <p>Below is a list of the classes I am currently taking this semester:</p>
+    <ul>
+        <li><a href="COMP351/COMP351.html">COMP 351</a></li>
+        <li>COMP 230</li>
+        <li>COMP 390</li>
+        <li>ASTR 101 (elective)</li>
+    </ul>
+    </main>
+</div>
 </body>
 </html>
