grammar + small tweaks

--- a/COMP351/labs/1/quizQuestions/quiz.html
+++ b/COMP351/labs/1/quizQuestions/quiz.html
@@ -27,7 +27,7 @@
     <input type="radio" name="1">d) "anonymous"<br>
     <hr>
 
-    <p>2) Which equation is correct given the following function?</p>
+    <p>2) Which two values are multiplied together in this function?</p>
     <p><span class="let">let</span> height = 0;<br><span class="let">let</span> width = 100;
         <br><span class="let">let</span> area = (height || 100) * (width || 50);
         <br><span class="alert">alert</span>(area);</p>
@@ -38,7 +38,7 @@
     <input type="radio" name="2">d) 0 * 100<br>
     <hr>
 
-    <p>3) What is value of x?</p>
+    <p>3) What is the value of x?</p>
     <p><span class="let">let</span> x = (1 && 2 && 3) ?? 4;
         <br><span class="alert">alert</span>(x);</p>
 
@@ -58,7 +58,7 @@
     <input type="radio" name="4">d) 7<br>
     <hr>
 
-    <p>5) Which code should be included within the empty brackets on the last line to achieve an output of 3?</p>
+    <p>5) Which code should be included within the empty brackets on the last line to achieve an integer output of 3?</p>
     <p><span class="let">let</span> sum = (a, b) => {
         <br>&nbsp;&nbsp;&nbsp;<span class="let">let</span> result = a + b;
         <br>&nbsp;&nbsp;&nbsp;<span class="return">return</span> sum;
