--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
     <h1>COMP 351 Home Page</h1>
     <img id="image" src="images/nick.png">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fringilla pretium efficitur. Nulla a enim eu mi facilisis venenatis eget id massa. Nulla sit amet sagittis quam. Maecenas auctor, ex quis mollis convallis, metus odio tristique arcu, a vehicula quam sem nec neque. Phasellus ut orci hendrerit eros facilisis venenatis. Praesent felis turpis, aliquam vitae mollis sed, mattis et tellus. Ut et neque urna. Donec porttitor ipsum eu iaculis dignissim. Praesent consequat rhoncus massa et semper. Morbi iaculis dolor id velit semper, eu tempor arcu finibus. Vivamus a lacus auctor, venenatis dui vel, volutpat enim.</p>
+    <blockquote>"Whether we wanted it or not, we've stepped into a war with the Cabal on Mars. So let's get to taking out their command, one by one. Valus Ta'aurc. From what I can gather he commands the Siege Dancers from an Imperial Land Tank outside of Rubicon. He's well protected, but with the right team, we can punch through those defenses, take this beast out, and break their grip on Freehold."<br>-Commander Zavala</blockquote>
     <p>Below is a list of the classes I am currently taking this semester:</p>
     <ul>
         <li><a href="COMP351/COMP351.html">COMP 351</a></li>
@@ -24,6 +24,7 @@
         <li>COMP 390</li>
         <li>ASTR 101 (elective)</li>
     </ul>
+    <dd></dd>
     </main>
 </div>
 </body>
